--- a/130. Surrounded Regions.ipynb
+++ b/130. Surrounded Regions.ipynb
@@ -11,57 +11,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### dfs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import List\n",
-    "from collections import deque\n",
-    "class Solution:\n",
-    "    def solve(self, board: List[List[str]]) -> None:\n",
-    "        \"\"\"\n",
-    "        Do not return anything, modify board in-place instead.\n",
-    "        \"\"\"\n",
-    "        rows = len(board)\n",
-    "        cols = len(board[0])\n",
+    "**時間複雜度: $O(m \\times n)$**  \n",
+    "**空間複雜度: $O(m \\times n)$**\n",
     "\n",
-    "        def bfs(row, col):\n",
-    "            queue = deque([(row, col)])\n",
-    "\n",
-    "        for row in range(rows):\n",
-    "            if board[row][0] == \"O\":\n",
-    "                bfs(row, col)\n",
-    "            if board[row][cols-1] == \"O\":\n",
-    "                bfs(row, col)\n",
-    "\n",
-    "        for col in range(cols):\n",
-    "            if board[0][col] == \"O\":\n",
-    "                bfs(row, col)\n",
-    "            if board[row-1][cols] == \"O\":\n",
-    "                bfs(row, col)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "board = [[\"X\",\"X\",\"X\",\"X\"],[\"X\",\"O\",\"O\",\"X\"],[\"X\",\"X\",\"O\",\"X\"],[\"X\",\"O\",\"X\",\"X\"]]\n",
-    "board = [[\"X\",\"X\",\"O\",\"O\"],[\"X\",\"O\",\"O\",\"X\"],[\"O\",\"X\",\"X\",\"X\"],[\"X\",\"O\",\"O\",\"X\"],[\"O\",\"X\",\"X\",\"X\"]]\n",
-    "Solution().solve(board)"
+    "- 變數解釋:\n",
+    "  - `m`: 行數\n",
+    "  - `n`: 列數"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### bfs"
+    "### dfs"
    ]
   },
   {
@@ -70,50 +32,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import deque\n",
+    "from typing import List\n",
     "\n",
     "class Solution:\n",
-    "    def solve(self, board):\n",
-    "        row = len(board)\n",
-    "        col = len(board[0])\n",
+    "    def solve(self, board: List[List[str]]) -> None:\n",
+    "        \"\"\"\n",
+    "        Do not return anything, modify board in-place instead.\n",
+    "        \"\"\"\n",
+    "        # 獲取棋盤的行數和列數\n",
+    "        rows = len(board)\n",
+    "        cols = len(board[0])\n",
     "\n",
-    "        Q = deque()\n",
+    "        def dfs(row, col): # time: O(m * n)，space: O(m * n)，最壞情況下，遞迴深度可能達到所有cell的數量\n",
+    "            # 如果超出邊界或不是'O',則返回\n",
+    "            if (\n",
+    "                row < 0 or row == rows or\n",
+    "                col < 0 or col == cols or\n",
+    "                board[row][col] != \"O\"\n",
+    "                ):\n",
+    "                return\n",
     "\n",
-    "        # 四邊中為\"O\"的位置加入Q的隊列中，這些位置及與其相連的\"O\"皆無法翻轉\n",
-    "        for r in range(row):\n",
-    "            if board[r][0] == \"O\": # 左側\n",
-    "                Q.append((r, 0))\n",
-    "            if board[r][col - 1] == \"O\": # 右側\n",
-    "                Q.append((r, col - 1))\n",
+    "            # 將當前的'O'標記為'#',表示這是與邊界相連的'O'\n",
+    "            board[row][col] = \"#\"\n",
     "\n",
-    "        for c in range(col):\n",
-    "            if (board[0][c] == \"O\") and ((0, c) not in Q): # 上側\n",
-    "                Q.append((0, c))\n",
-    "            if (board[row - 1][c] == \"O\") and ((row - 1, c) not in Q): # 下側\n",
-    "                Q.append((row - 1, c))\n",
+    "            # 遞歸搜索上下左右四個方向\n",
+    "            dfs(row-1, col)  # 上\n",
+    "            dfs(row+1, col)  # 下\n",
+    "            dfs(row, col-1)  # 左\n",
+    "            dfs(row, col+1)  # 右\n",
     "\n",
+    "        # 查看有無與左右邊界相連的'O'\n",
+    "        for row in range(rows): # time: O(m)\n",
+    "            dfs(row, 0)        # 左邊界\n",
+    "            dfs(row, cols-1)   # 右邊界\n",
     "\n",
-    "        # 依序抓出Q列隊的元素，查詢該元素的上、下、左、右元素是否有\"O\"，若有則加入Q的隊列，並將該元素轉為\"#\"\n",
-    "        while Q:\n",
-    "            r, c = Q.popleft()\n",
-    "            board[r][c] = \"#\"\n",
-    "            # 查詢上、下、左、右的元素\n",
-    "            for rr, cc in [(r + 1, c), (r - 1, c), (r, c + 1), (r, c - 1)]:\n",
-    "                # rr、cc在row和col範圍內\n",
-    "                # board[rr][cc]的值為\"O\" 且 (rr, cc)不在Q中\n",
-    "                if ((0 <= rr < row) and (0 <= cc < col)) and ((board[rr][cc] == \"O\") and ((rr, cc) not in Q)):\n",
-    "                    Q.append((rr, cc))\n",
-    "                    board[rr][cc] = \"#\"\n",
+    "        # 查看有無與上下邊界相連的'O'\n",
+    "        for col in range(cols): # time: O(n)\n",
+    "            dfs(0, col)        # 上邊界\n",
+    "            dfs(rows-1, col)   # 下邊界\n",
     "\n",
-    "        # 將剩餘的\"O\"翻轉成\"X\"\n",
-    "        for r in range(row):\n",
-    "            for c in range(col):\n",
-    "                if board[r][c] == \"O\":\n",
-    "                    board[r][c] = \"X\"\n",
-    "                if board[r][c] == \"#\":\n",
-    "                    board[r][c] = \"O\"\n",
-    "        \n",
-    "        return board"
+    "        # 遍歷整個棋盤 # time: O(m * n)\n",
+    "        for row in range(rows):\n",
+    "            for col in range(cols):\n",
+    "                if board[row][col] == \"O\":    # 將未被標記的'O'變成'X'\n",
+    "                    board[row][col] = \"X\"\n",
+    "                elif board[row][col] == \"#\":   # 將標記的'#'恢復成'O'\n",
+    "                    board[row][col] = \"O\""
    ]
   },
   {
@@ -137,9 +101,105 @@
     }
    ],
    "source": [
+    "# board = [[\"X\",\"X\",\"X\",\"X\"],[\"X\",\"O\",\"O\",\"X\"],[\"X\",\"X\",\"O\",\"X\"],[\"X\",\"O\",\"X\",\"X\"]]\n",
+    "board = [[\"X\",\"X\",\"O\",\"O\"],[\"X\",\"O\",\"O\",\"X\"],[\"O\",\"X\",\"X\",\"X\"],[\"X\",\"O\",\"O\",\"X\"],[\"O\",\"X\",\"X\",\"X\"]]\n",
+    "Solution().solve(board)\n",
+    "board"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### bfs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "from collections import deque\n",
+    "\n",
+    "class Solution:\n",
+    "    def solve(self, board: List[List[str]]) -> None:\n",
+    "        \"\"\"\n",
+    "        \"\"\"\n",
+    "        # 獲取棋盤的行數和列數\n",
+    "        rows = len(board)\n",
+    "        cols = len(board[0])\n",
+    "\n",
+    "        # 創建一個隊列用於BFS\n",
+    "        queue = deque([])\n",
+    "\n",
+    "        # 檢查左右邊界,將邊界上的'O'加入隊列\n",
+    "        for row in range(rows): # time: O(m)\n",
+    "            if board[row][0] == \"O\":          # 檢查左邊界\n",
+    "                queue.append((row, 0))\n",
+    "            if board[row][cols-1] == \"O\":     # 檢查右邊界\n",
+    "                queue.append((row, cols-1))\n",
+    "\n",
+    "        # 檢查上下邊界,將邊界上的'O'加入隊列\n",
+    "        for col in range(cols): # time: O(n)\n",
+    "            if board[0][col] == \"O\":          # 檢查上邊界\n",
+    "                queue.append((0, col))\n",
+    "            if board[rows-1][col] == \"O\":     # 檢查下邊界\n",
+    "                queue.append((rows-1, col))\n",
+    "\n",
+    "        # 定義四個方向的偏移量(上、下、左、右)\n",
+    "        directions = [(-1, 0), (1, 0), (0, -1), (0, 1)]\n",
+    "\n",
+    "        # BFS (查看與邊建相連的'O')\n",
+    "        while queue:  # time: O(m * n)，space: O(m * n)，最壞情況下，所有cell都可能加入queue\n",
+    "            row, col = queue.popleft()        # 取出當前位置\n",
+    "            board[row][col] = \"#\"             # 將當前的'O'標記為'#'\n",
+    "            \n",
+    "            # 遍歷四個方向\n",
+    "            for dr, dc in directions:\n",
+    "                # 計算新的位置\n",
+    "                new_row = row + dr\n",
+    "                new_col = col + dc\n",
+    "                \n",
+    "                # 檢查新位置是否有效且為'O'\n",
+    "                if (0 <= new_row < rows) and (0 <= new_col < cols) and (board[new_row][new_col] == \"O\"):\n",
+    "                    queue.append((new_row, new_col))\n",
+    "\n",
+    "        # 遍歷整個棋盤  # time: O(m * n)\n",
+    "        for row in range(rows):\n",
+    "            for col in range(cols):\n",
+    "                if board[row][col] == \"O\":    # 將未被標記的'O'變成'X'\n",
+    "                    board[row][col] = \"X\"\n",
+    "                elif board[row][col] == \"#\":   # 將標記的'#'恢復成'O'\n",
+    "                    board[row][col] = \"O\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['X', 'X', 'O', 'O'],\n",
+       " ['X', 'O', 'O', 'X'],\n",
+       " ['O', 'X', 'X', 'X'],\n",
+       " ['X', 'X', 'X', 'X'],\n",
+       " ['O', 'X', 'X', 'X']]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "board = [[\"X\",\"X\",\"X\",\"X\"],[\"X\",\"O\",\"O\",\"X\"],[\"X\",\"X\",\"O\",\"X\"],[\"X\",\"O\",\"X\",\"X\"]]\n",
     "board = [[\"X\",\"X\",\"O\",\"O\"],[\"X\",\"O\",\"O\",\"X\"],[\"O\",\"X\",\"X\",\"X\"],[\"X\",\"O\",\"O\",\"X\"],[\"O\",\"X\",\"X\",\"X\"]]\n",
-    "Solution().solve(board)"
+    "Solution().solve(board)\n",
+    "board"
    ]
   }
  ],
@@ -159,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
