--- a/46. Permutations.ipynb
+++ b/46. Permutations.ipynb
@@ -8,197 +8,219 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "class Solution:\n",
-    "    def permute(self, nums):\n",
-    "        # 初始化已訪問的索引集合和結果集合\n",
-    "        self.visited = set()\n",
-    "        self.res = []\n",
-    "        self.nums = nums\n",
-    "        self.n = len(nums)\n",
+    "**時間複雜度: $O(n \\times n!)$**  \n",
+    "**空間複雜度: $O(n \\times n!)$**\n",
     "\n",
-    "        # 開始深度優先搜索\n",
-    "        self.dfs(subset = [])\n",
-    "        return self.res\n",
-    "\n",
-    "    def dfs(self, subset):\n",
-    "        print(\"-\" * 150)\n",
-    "        print(f\"subset = {subset}\")\n",
-    "        # 如果當前子集的長度等於給定數字陣列的長度，則表示找到一個排列，將其加入結果集\n",
-    "        if len(subset) == self.n:\n",
-    "            self.res.append(subset)\n",
-    "            print(f\"-> res = {self.res}\")\n",
-    "            return\n",
-    "\n",
-    "        # 遍歷數字陣列的每個元素\n",
-    "        for i, num in enumerate(self.nums):\n",
-    "            print(f\"i = {i}, num = {num}\")\n",
-    "            # 如果該索引尚未被訪問\n",
-    "            if i not in self.visited:\n",
-    "                print(f\"(i = {i}) not in (visited = {self.visited})\")\n",
-    "                # 將該索引添加到已訪問的集合中\n",
-    "                self.visited.add(i)\n",
-    "                print(f\"visited = {self.visited}\")\n",
-    "\n",
-    "                # 遞歸探索下一層，將當前元素添加到子集中\n",
-    "                self.dfs(subset = (subset + [num]))\n",
-    "                print(f\"dfs -> i = {i}, num = {num}, subset = {subset}\")\n",
-    "\n",
-    "                # 恢復已訪問的狀態，以便探索其他可能性\n",
-    "                self.visited.remove(i)                \n",
-    "                print(f\"visited = {self.visited}\")"
+    "變數解釋:\n",
+    "- `n!`: n! 種排列\n",
+    "- `n`: 遞歸的深度最大為 n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def permute(self, nums: List[int]) -> List[List[int]]:\n",
+    "        def backtrack(start): # time: O(n!)、space: O(n) (n! 種排列、遞歸深度最大為 n)\n",
+    "            # 當start等於陣列長度時,表示已經處理完所有位置\n",
+    "            if start == len(nums):\n",
+    "                # 將當前排列加入結果列表(需要複製一份,因為nums會被修改)\n",
+    "                result.append(nums[:])\n",
+    "                \n",
+    "                print(\"_\"*100)\n",
+    "                print(f\"{nums=}\")\n",
+    "                print(f\"({start=}) == ({len(nums)=}) -> {result=}\")\n",
+    "                return\n",
+    "            \n",
+    "            # 嘗試將start位置後的每個數字放到start位置\n",
+    "            for i in range(start, len(nums)): # time: O(n)\n",
+    "                print(\"-\"*100)\n",
+    "                print(f\"{nums=}\")\n",
+    "                print(f\"{start=}, {i=}\")\n",
+    "                print(f\"init: {nums[start]=}, {nums[i]=}\")\n",
+    "\n",
+    "                # 交換當前位置的元素\n",
+    "                nums[start], nums[i] = nums[i], nums[start]\n",
+    "                print(f\"swap: {nums[start]=}, {nums[i]=}\")\n",
+    "\n",
+    "                # 遞迴處理下一個位置\n",
+    "                print(f\"backtrack: {nums=}\")\n",
+    "                backtrack(start + 1) # time: O(n!)\n",
+    "\n",
+    "                # 回溯,恢復原始狀態,為下一次迭代做準備\n",
+    "                nums[start], nums[i] = nums[i], nums[start]                \n",
+    "                print(f\"back: {start=}, {i=}\")\n",
+    "                print(f\"back: {nums[start]=}, {nums[i]=}\")\n",
+    "        \n",
+    "        result = []  # 存儲所有排列結果 # O(n⋅n!)，n! 種排列、每種排列需要 O(n) 的空間\n",
+    "        backtrack(start = 0)  # 從位置0開始進行回溯\n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "subset = []\n",
-      "i = 0, num = 1\n",
-      "(i = 0) not in (visited = set())\n",
-      "visited = {0}\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "subset = [1]\n",
-      "i = 0, num = 1\n",
-      "i = 1, num = 2\n",
-      "(i = 1) not in (visited = {0})\n",
-      "visited = {0, 1}\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "subset = [1, 2]\n",
-      "i = 0, num = 1\n",
-      "i = 1, num = 2\n",
-      "i = 2, num = 3\n",
-      "(i = 2) not in (visited = {0, 1})\n",
-      "visited = {0, 1, 2}\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "subset = [1, 2, 3]\n",
-      "-> res = [[1, 2, 3]]\n",
-      "dfs -> i = 2, num = 3, subset = [1, 2]\n",
-      "visited = {0, 1}\n",
-      "dfs -> i = 1, num = 2, subset = [1]\n",
-      "visited = {0}\n",
-      "i = 2, num = 3\n",
-      "(i = 2) not in (visited = {0})\n",
-      "visited = {0, 2}\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "subset = [1, 3]\n",
-      "i = 0, num = 1\n",
-      "i = 1, num = 2\n",
-      "(i = 1) not in (visited = {0, 2})\n",
-      "visited = {0, 1, 2}\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "subset = [1, 3, 2]\n",
-      "-> res = [[1, 2, 3], [1, 3, 2]]\n",
-      "dfs -> i = 1, num = 2, subset = [1, 3]\n",
-      "visited = {0, 2}\n",
-      "i = 2, num = 3\n",
-      "dfs -> i = 2, num = 3, subset = [1]\n",
-      "visited = {0}\n",
-      "dfs -> i = 0, num = 1, subset = []\n",
-      "visited = set()\n",
-      "i = 1, num = 2\n",
-      "(i = 1) not in (visited = set())\n",
-      "visited = {1}\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "subset = [2]\n",
-      "i = 0, num = 1\n",
-      "(i = 0) not in (visited = {1})\n",
-      "visited = {0, 1}\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "subset = [2, 1]\n",
-      "i = 0, num = 1\n",
-      "i = 1, num = 2\n",
-      "i = 2, num = 3\n",
-      "(i = 2) not in (visited = {0, 1})\n",
-      "visited = {0, 1, 2}\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "subset = [2, 1, 3]\n",
-      "-> res = [[1, 2, 3], [1, 3, 2], [2, 1, 3]]\n",
-      "dfs -> i = 2, num = 3, subset = [2, 1]\n",
-      "visited = {0, 1}\n",
-      "dfs -> i = 0, num = 1, subset = [2]\n",
-      "visited = {1}\n",
-      "i = 1, num = 2\n",
-      "i = 2, num = 3\n",
-      "(i = 2) not in (visited = {1})\n",
-      "visited = {1, 2}\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "subset = [2, 3]\n",
-      "i = 0, num = 1\n",
-      "(i = 0) not in (visited = {1, 2})\n",
-      "visited = {0, 1, 2}\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "subset = [2, 3, 1]\n",
-      "-> res = [[1, 2, 3], [1, 3, 2], [2, 1, 3], [2, 3, 1]]\n",
-      "dfs -> i = 0, num = 1, subset = [2, 3]\n",
-      "visited = {1, 2}\n",
-      "i = 1, num = 2\n",
-      "i = 2, num = 3\n",
-      "dfs -> i = 2, num = 3, subset = [2]\n",
-      "visited = {1}\n",
-      "dfs -> i = 1, num = 2, subset = []\n",
-      "visited = set()\n",
-      "i = 2, num = 3\n",
-      "(i = 2) not in (visited = set())\n",
-      "visited = {2}\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "subset = [3]\n",
-      "i = 0, num = 1\n",
-      "(i = 0) not in (visited = {2})\n",
-      "visited = {0, 2}\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "subset = [3, 1]\n",
-      "i = 0, num = 1\n",
-      "i = 1, num = 2\n",
-      "(i = 1) not in (visited = {0, 2})\n",
-      "visited = {0, 2, 1}\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "subset = [3, 1, 2]\n",
-      "-> res = [[1, 2, 3], [1, 3, 2], [2, 1, 3], [2, 3, 1], [3, 1, 2]]\n",
-      "dfs -> i = 1, num = 2, subset = [3, 1]\n",
-      "visited = {0, 2}\n",
-      "i = 2, num = 3\n",
-      "dfs -> i = 0, num = 1, subset = [3]\n",
-      "visited = {2}\n",
-      "i = 1, num = 2\n",
-      "(i = 1) not in (visited = {2})\n",
-      "visited = {2, 1}\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "subset = [3, 2]\n",
-      "i = 0, num = 1\n",
-      "(i = 0) not in (visited = {2, 1})\n",
-      "visited = {0, 2, 1}\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "subset = [3, 2, 1]\n",
-      "-> res = [[1, 2, 3], [1, 3, 2], [2, 1, 3], [2, 3, 1], [3, 1, 2], [3, 2, 1]]\n",
-      "dfs -> i = 0, num = 1, subset = [3, 2]\n",
-      "visited = {2, 1}\n",
-      "i = 1, num = 2\n",
-      "i = 2, num = 3\n",
-      "dfs -> i = 1, num = 2, subset = [3]\n",
-      "visited = {2}\n",
-      "i = 2, num = 3\n",
-      "dfs -> i = 2, num = 3, subset = []\n",
-      "visited = set()\n"
+      "----------------------------------------------------------------------------------------------------\n",
+      "nums=[1, 2, 3]\n",
+      "start=0, i=0\n",
+      "init: nums[start]=1, nums[i]=1\n",
+      "swap: nums[start]=1, nums[i]=1\n",
+      "backtrack: nums=[1, 2, 3]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "nums=[1, 2, 3]\n",
+      "start=1, i=1\n",
+      "init: nums[start]=2, nums[i]=2\n",
+      "swap: nums[start]=2, nums[i]=2\n",
+      "backtrack: nums=[1, 2, 3]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "nums=[1, 2, 3]\n",
+      "start=2, i=2\n",
+      "init: nums[start]=3, nums[i]=3\n",
+      "swap: nums[start]=3, nums[i]=3\n",
+      "backtrack: nums=[1, 2, 3]\n",
+      "____________________________________________________________________________________________________\n",
+      "nums=[1, 2, 3]\n",
+      "(start=3) == (len(nums)=3) -> result=[[1, 2, 3]]\n",
+      "back: start=2, i=2\n",
+      "back: nums[start]=3, nums[i]=3\n",
+      "back: start=1, i=1\n",
+      "back: nums[start]=2, nums[i]=2\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "nums=[1, 2, 3]\n",
+      "start=1, i=2\n",
+      "init: nums[start]=2, nums[i]=3\n",
+      "swap: nums[start]=3, nums[i]=2\n",
+      "backtrack: nums=[1, 3, 2]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "nums=[1, 3, 2]\n",
+      "start=2, i=2\n",
+      "init: nums[start]=2, nums[i]=2\n",
+      "swap: nums[start]=2, nums[i]=2\n",
+      "backtrack: nums=[1, 3, 2]\n",
+      "____________________________________________________________________________________________________\n",
+      "nums=[1, 3, 2]\n",
+      "(start=3) == (len(nums)=3) -> result=[[1, 3, 2], [1, 3, 2]]\n",
+      "back: start=2, i=2\n",
+      "back: nums[start]=2, nums[i]=2\n",
+      "back: start=1, i=2\n",
+      "back: nums[start]=2, nums[i]=3\n",
+      "back: start=0, i=0\n",
+      "back: nums[start]=1, nums[i]=1\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "nums=[1, 2, 3]\n",
+      "start=0, i=1\n",
+      "init: nums[start]=1, nums[i]=2\n",
+      "swap: nums[start]=2, nums[i]=1\n",
+      "backtrack: nums=[2, 1, 3]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "nums=[2, 1, 3]\n",
+      "start=1, i=1\n",
+      "init: nums[start]=1, nums[i]=1\n",
+      "swap: nums[start]=1, nums[i]=1\n",
+      "backtrack: nums=[2, 1, 3]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "nums=[2, 1, 3]\n",
+      "start=2, i=2\n",
+      "init: nums[start]=3, nums[i]=3\n",
+      "swap: nums[start]=3, nums[i]=3\n",
+      "backtrack: nums=[2, 1, 3]\n",
+      "____________________________________________________________________________________________________\n",
+      "nums=[2, 1, 3]\n",
+      "(start=3) == (len(nums)=3) -> result=[[2, 1, 3], [2, 1, 3], [2, 1, 3]]\n",
+      "back: start=2, i=2\n",
+      "back: nums[start]=3, nums[i]=3\n",
+      "back: start=1, i=1\n",
+      "back: nums[start]=1, nums[i]=1\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "nums=[2, 1, 3]\n",
+      "start=1, i=2\n",
+      "init: nums[start]=1, nums[i]=3\n",
+      "swap: nums[start]=3, nums[i]=1\n",
+      "backtrack: nums=[2, 3, 1]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "nums=[2, 3, 1]\n",
+      "start=2, i=2\n",
+      "init: nums[start]=1, nums[i]=1\n",
+      "swap: nums[start]=1, nums[i]=1\n",
+      "backtrack: nums=[2, 3, 1]\n",
+      "____________________________________________________________________________________________________\n",
+      "nums=[2, 3, 1]\n",
+      "(start=3) == (len(nums)=3) -> result=[[2, 3, 1], [2, 3, 1], [2, 3, 1], [2, 3, 1]]\n",
+      "back: start=2, i=2\n",
+      "back: nums[start]=1, nums[i]=1\n",
+      "back: start=1, i=2\n",
+      "back: nums[start]=1, nums[i]=3\n",
+      "back: start=0, i=1\n",
+      "back: nums[start]=1, nums[i]=2\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "nums=[1, 2, 3]\n",
+      "start=0, i=2\n",
+      "init: nums[start]=1, nums[i]=3\n",
+      "swap: nums[start]=3, nums[i]=1\n",
+      "backtrack: nums=[3, 2, 1]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "nums=[3, 2, 1]\n",
+      "start=1, i=1\n",
+      "init: nums[start]=2, nums[i]=2\n",
+      "swap: nums[start]=2, nums[i]=2\n",
+      "backtrack: nums=[3, 2, 1]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "nums=[3, 2, 1]\n",
+      "start=2, i=2\n",
+      "init: nums[start]=1, nums[i]=1\n",
+      "swap: nums[start]=1, nums[i]=1\n",
+      "backtrack: nums=[3, 2, 1]\n",
+      "____________________________________________________________________________________________________\n",
+      "nums=[3, 2, 1]\n",
+      "(start=3) == (len(nums)=3) -> result=[[3, 2, 1], [3, 2, 1], [3, 2, 1], [3, 2, 1], [3, 2, 1]]\n",
+      "back: start=2, i=2\n",
+      "back: nums[start]=1, nums[i]=1\n",
+      "back: start=1, i=1\n",
+      "back: nums[start]=2, nums[i]=2\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "nums=[3, 2, 1]\n",
+      "start=1, i=2\n",
+      "init: nums[start]=2, nums[i]=1\n",
+      "swap: nums[start]=1, nums[i]=2\n",
+      "backtrack: nums=[3, 1, 2]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "nums=[3, 1, 2]\n",
+      "start=2, i=2\n",
+      "init: nums[start]=2, nums[i]=2\n",
+      "swap: nums[start]=2, nums[i]=2\n",
+      "backtrack: nums=[3, 1, 2]\n",
+      "____________________________________________________________________________________________________\n",
+      "nums=[3, 1, 2]\n",
+      "(start=3) == (len(nums)=3) -> result=[[3, 1, 2], [3, 1, 2], [3, 1, 2], [3, 1, 2], [3, 1, 2], [3, 1, 2]]\n",
+      "back: start=2, i=2\n",
+      "back: nums[start]=2, nums[i]=2\n",
+      "back: start=1, i=2\n",
+      "back: nums[start]=2, nums[i]=1\n",
+      "back: start=0, i=2\n",
+      "back: nums[start]=1, nums[i]=3\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[[1, 2, 3], [1, 3, 2], [2, 1, 3], [2, 3, 1], [3, 1, 2], [3, 2, 1]]"
+       "[[1, 2, 3], [1, 2, 3], [1, 2, 3], [1, 2, 3], [1, 2, 3], [1, 2, 3]]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,6 +231,20 @@
     "\n",
     "Solution().permute(nums)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -227,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
