--- a/78. Subsets.ipynb
+++ b/78. Subsets.ipynb
@@ -8,130 +8,133 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: $O(n \\times 2^n)$**  \n",
+    "**空間複雜度: $O(n \\times 2^n)$**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from typing import List\n",
+    "\n",
     "class Solution:\n",
-    "    def subsets(self, nums):\n",
-    "        # 將輸入數組排序，確保相同元素相鄰，方便後續處理\n",
-    "        self.nums = sorted(nums)\n",
-    "        # 記錄數組的長度\n",
-    "        self.n = len(nums)\n",
-    "        # 用於存儲最終結果的列表\n",
-    "        self.res = []\n",
-    "        # 執行深度優先搜索，起始點為0，初始路徑為空列表\n",
-    "        self.dfs(index = 0, path=[])\n",
-    "        \n",
-    "        return self.res\n",
-    "    \n",
-    "    def dfs(self, index, path):\n",
-    "        print(\"-\" * 150)\n",
-    "        print(f\"index = {index}, path = {path}\")\n",
+    "    def subsets(self, nums: List[int]) -> List[List[int]]:\n",
+    "        # 使用回溯法生成所有子集\n",
+    "        def backtrack(start, path): # time: O(2^n) # space: O(n)\n",
+    "            # 將當前路徑加入結果中\n",
+    "            # 使用path[:]創建一個新的列表,避免後續修改影響結果\n",
+    "            result.append(path[:])\n",
+    "            print(f\"{result=}\")\n",
     "\n",
-    "        # 添加當前路徑到結果列表\n",
-    "        self.res.append(path)\n",
-    "        print(f\"res = {self.res}\")\n",
+    "            # 從start開始遍歷,確保不會重複使用之前的元素\n",
+    "            for i in range(start, len(nums)): # time: O(n)\n",
+    "                print(\"-\" * 100)\n",
+    "                # 將當前數字加入路徑\n",
+    "                path.append(nums[i])\n",
+    "                print(f\"add: ({start=}, {i=}, {nums[i]=})-> {path=}\")\n",
+    "                # 遞迴處理下一個位置,start設為i+1避免重複\n",
+    "                backtrack(start=i+1, path = path)\n",
+    "                # 回溯:移除最後加入的數字,嘗試其他可能\n",
+    "                path.pop()\n",
+    "                print(f\"pop: ({start=}, {i=}, {nums[i]=}) -> {path=}\")\n",
     "\n",
-    "        # 從當前索引開始遍歷數組元素\n",
-    "        for i in range(index, self.n):\n",
-    "            print(f\"index = {index}, i+1 = {i+1} -> dfs\")\n",
+    "            print(\"_\" * 100)\n",
     "\n",
-    "            # 如果當前元素與前一個元素相同，則跳過該元素，避免生成重複的子集\n",
-    "            if (i > index) and (self.nums[i] == self.nums[i-1]):\n",
-    "                continue\n",
+    "        # 儲存所有子集的結果列表\n",
+    "        result = [] # space: O(n * 2^n)，共有2^n個子集，每個子集最多有n個元素\n",
+    "        # 從位置0開始回溯,初始路徑為空列表\n",
+    "        backtrack(start=0, path=[])\n",
     "\n",
-    "            # 遞歸調用深度優先搜索，更新索引和路徑\n",
-    "            self.dfs(index = (i + 1), path = (path + [self.nums[i]]))\n"
+    "        return result"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = [] # [] # 2^0 = 1\n",
+    "nums = [1] # [[], [1]] # 2^1 = 2\n",
+    "nums = [1,2] # [[], [1], [1,2], [2]] # 2^2 = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 0, path = []\n",
-      "res = [[]]\n",
-      "index = 0, i+1 = 1 -> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 1, path = [1]\n",
-      "res = [[], [1]]\n",
-      "index = 1, i+1 = 2 -> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 2, path = [1, 2]\n",
-      "res = [[], [1], [1, 2]]\n",
-      "index = 2, i+1 = 3 -> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 3, path = [1, 2, 2]\n",
-      "res = [[], [1], [1, 2], [1, 2, 2]]\n",
-      "index = 3, i+1 = 4 -> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 4, path = [1, 2, 2, 3]\n",
-      "res = [[], [1], [1, 2], [1, 2, 2], [1, 2, 2, 3]]\n",
-      "index = 2, i+1 = 4 -> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 4, path = [1, 2, 3]\n",
-      "res = [[], [1], [1, 2], [1, 2, 2], [1, 2, 2, 3], [1, 2, 3]]\n",
-      "index = 1, i+1 = 3 -> dfs\n",
-      "index = 1, i+1 = 4 -> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 4, path = [1, 3]\n",
-      "res = [[], [1], [1, 2], [1, 2, 2], [1, 2, 2, 3], [1, 2, 3], [1, 3]]\n",
-      "index = 0, i+1 = 2 -> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 2, path = [2]\n",
-      "res = [[], [1], [1, 2], [1, 2, 2], [1, 2, 2, 3], [1, 2, 3], [1, 3], [2]]\n",
-      "index = 2, i+1 = 3 -> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 3, path = [2, 2]\n",
-      "res = [[], [1], [1, 2], [1, 2, 2], [1, 2, 2, 3], [1, 2, 3], [1, 3], [2], [2, 2]]\n",
-      "index = 3, i+1 = 4 -> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 4, path = [2, 2, 3]\n",
-      "res = [[], [1], [1, 2], [1, 2, 2], [1, 2, 2, 3], [1, 2, 3], [1, 3], [2], [2, 2], [2, 2, 3]]\n",
-      "index = 2, i+1 = 4 -> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 4, path = [2, 3]\n",
-      "res = [[], [1], [1, 2], [1, 2, 2], [1, 2, 2, 3], [1, 2, 3], [1, 3], [2], [2, 2], [2, 2, 3], [2, 3]]\n",
-      "index = 0, i+1 = 3 -> dfs\n",
-      "index = 0, i+1 = 4 -> dfs\n",
-      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
-      "index = 4, path = [3]\n",
-      "res = [[], [1], [1, 2], [1, 2, 2], [1, 2, 2, 3], [1, 2, 3], [1, 3], [2], [2, 2], [2, 2, 3], [2, 3], [3]]\n"
+      "result=[[]]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "add: (start=0, i=0, nums[i]=1)-> path=[1]\n",
+      "result=[[], [1]]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "add: (start=1, i=1, nums[i]=2)-> path=[1, 2]\n",
+      "result=[[], [1], [1, 2]]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "add: (start=2, i=2, nums[i]=3)-> path=[1, 2, 3]\n",
+      "result=[[], [1], [1, 2], [1, 2, 3]]\n",
+      "____________________________________________________________________________________________________\n",
+      "pop: (start=2, i=2, nums[i]=3) -> path=[1, 2]\n",
+      "____________________________________________________________________________________________________\n",
+      "pop: (start=1, i=1, nums[i]=2) -> path=[1]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "add: (start=1, i=2, nums[i]=3)-> path=[1, 3]\n",
+      "result=[[], [1], [1, 2], [1, 2, 3], [1, 3]]\n",
+      "____________________________________________________________________________________________________\n",
+      "pop: (start=1, i=2, nums[i]=3) -> path=[1]\n",
+      "____________________________________________________________________________________________________\n",
+      "pop: (start=0, i=0, nums[i]=1) -> path=[]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "add: (start=0, i=1, nums[i]=2)-> path=[2]\n",
+      "result=[[], [1], [1, 2], [1, 2, 3], [1, 3], [2]]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "add: (start=2, i=2, nums[i]=3)-> path=[2, 3]\n",
+      "result=[[], [1], [1, 2], [1, 2, 3], [1, 3], [2], [2, 3]]\n",
+      "____________________________________________________________________________________________________\n",
+      "pop: (start=2, i=2, nums[i]=3) -> path=[2]\n",
+      "____________________________________________________________________________________________________\n",
+      "pop: (start=0, i=1, nums[i]=2) -> path=[]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "add: (start=0, i=2, nums[i]=3)-> path=[3]\n",
+      "result=[[], [1], [1, 2], [1, 2, 3], [1, 3], [2], [2, 3], [3]]\n",
+      "____________________________________________________________________________________________________\n",
+      "pop: (start=0, i=2, nums[i]=3) -> path=[]\n",
+      "____________________________________________________________________________________________________\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[[],\n",
-       " [1],\n",
-       " [1, 2],\n",
-       " [1, 2, 2],\n",
-       " [1, 2, 2, 3],\n",
-       " [1, 2, 3],\n",
-       " [1, 3],\n",
-       " [2],\n",
-       " [2, 2],\n",
-       " [2, 2, 3],\n",
-       " [2, 3],\n",
-       " [3]]"
+       "[[], [1], [1, 2], [1, 2, 3], [1, 3], [2], [2, 3], [3]]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nums = [1, 2, 2, 3]\n",
+    "nums = [1,2,3]\n",
     "Solution().subsets(nums)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -150,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
