--- a/70. Climbing Stairs.ipynb
+++ b/70. Climbing Stairs.ipynb
@@ -11,59 +11,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Fibonacci Numbers（費波那契數列）\n",
+    "特點：\n",
+    "- 序列的前兩個數字是 0 和 1\n",
+    "- 從第三個數字開始，每個數字都是前兩個數字的和\n",
+    "- ex: 0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- n 的可能組合數\n",
+    "  - n-1 的可能組合數 + 一步\n",
+    "  - n-2 的可能組合數 + 兩步\n",
+    "\n",
     "#0-1  \n",
     "\n",
     "#1-1  \n",
     "1  \n",
     "  \n",
     "#2-2 (1+1)  \n",
-    "1 1  \n",
-    "2  \n",
+    "1 1  (+1)  \n",
+    "2  (+2)  \n",
     "  \n",
     "#3-3 (1+2)  \n",
-    "1 1 1  \n",
-    "2 1  \n",
-    "1 2  \n",
+    "1 1 1   (+1)  \n",
+    "2 1   (+1)  \n",
+    "1 2  (+2)  \n",
     "  \n",
     "#4-5 (2+3)  \n",
-    "1 1 1 1  \n",
-    "2 1 1  \n",
-    "1 2 1  \n",
-    "1 1 2  \n",
-    "2 2  \n",
+    "1 1 1 1   (+1)    \n",
+    "2 1 1   (+1)  \n",
+    "1 2 1   (+1)  \n",
+    "1 1 2   (+2)  \n",
+    "2 2   (+2)  \n",
     "  \n",
     "#5-8 (3+5)  \n",
-    "1 1 1 1 1  \n",
-    "2 1 1 1  \n",
-    "1 2 1 1  \n",
-    "1 1 2 1  \n",
-    "1 1 1 2  \n",
-    "2 2 1  \n",
-    "2 1 2  \n",
-    "1 2 2  \n",
+    "1 1 1 1 1   (+1)   \n",
+    "2 1 1 1   (+1)    \n",
+    "1 2 1 1   (+1)  \n",
+    "1 1 2 1   (+1)  \n",
+    "2 2 1   (+1)  \n",
+    "1 1 1 2   (+2)  \n",
+    "2 1 2   (+2)  \n",
+    "1 2 2   (+2)  \n",
     "  \n",
     "#6-13 (5+8)   \n",
-    "1 1 1 1 1 1  \n",
-    "2 1 1 1 1  \n",
-    "1 2 1 1 1  \n",
-    "1 1 2 1 1  \n",
-    "1 1 1 2 1  \n",
-    "1 1 1 1 2  \n",
-    "2 2 1 1  \n",
-    "2 1 2 1  \n",
-    "2 1 1 2  \n",
-    "1 2 2 1  \n",
-    "1 2 1 2  \n",
-    "1 1 2 2  \n",
-    "2 2 2  \n"
+    "1 1 1 1 1 1   (+1)  \n",
+    "2 1 1 1 1   (+1)  \n",
+    "1 2 1 1 1   (+1)  \n",
+    "1 1 2 1 1   (+1)  \n",
+    "2 2 1 1   (+1)  \n",
+    "1 1 1 2 1   (+1)  \n",
+    "2 1 2 1   (+1)  \n",
+    "1 2 2 1   (+1)  \n",
+    "1 1 1 1 2   (+2)  \n",
+    "2 1 1 2   (+2)  \n",
+    "1 2 1 2   (+2)  \n",
+    "1 1 2 2   (+2)  \n",
+    "2 2 2   (+2)  \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
