--- a/70. Climbing Stairs.ipynb
+++ b/70. Climbing Stairs.ipynb
@@ -116,11 +116,11 @@
     "            return 1\n",
     "\n",
     "        # 初始化變數，代表前兩個階段的方式數\n",
-    "        last1 = 1  # 對應爬上 n-1 階的方式數，第 1 階為 1\n",
-    "        last2 = 1  # 對應爬上 n-2 階的方式數，第 0 階為 1\n",
+    "        last1 = 1  # 對應爬上 n-1 階的方式數，第 1 階為 1 # space: O(1)\n",
+    "        last2 = 1  # 對應爬上 n-2 階的方式數，第 0 階為 1 # space: O(1)\n",
     "\n",
     "        # 從第2階開始計算，直到第n階\n",
-    "        for _ in range(2, n+1):\n",
+    "        for _ in range(2, n+1): # time: O(n)\n",
     "            # 當前階段的方式數等於前兩個階段方式數之和\n",
     "            current = last1 + last2\n",
     "            print(f\"last1: {last1}, last2: {last2}, current: {current}\")\n",
