--- a/300. Longest Increasing Subsequence.ipynb
+++ b/300. Longest Increasing Subsequence.ipynb
@@ -11,13 +11,161 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**時間複雜度: O($n log{_2} n$)**  \n",
+    "**空間複雜度: O($n$)**\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class Solution:\n",
+    "    def lengthOfLIS(self, nums: List[int]) -> int:\n",
+    "        # 如果 nums 是空的，返回 0\n",
+    "        if not nums:\n",
+    "            return 0\n",
+    "        \n",
+    "        # tails[i] 表示長度為 i+1 的遞增子序列的最小結尾數字\n",
+    "        tails = [] # space: O(n)\n",
+    "        \n",
+    "        for num in nums: # time: O(n)\n",
+    "            # 使用二分搜索找到 num 應該插入的位置\n",
+    "            left, right = 0, len(tails)\n",
+    "            \n",
+    "            while left < right: # time: O(log n)\n",
+    "                mid = (left + right) // 2\n",
+    "                print(f\"{left = }, {right = }, {mid = }\")\n",
+    "                if tails[mid] < num:\n",
+    "                    left = mid + 1\n",
+    "                    print(f\"(tail[{mid}]={tails[mid]}) < ({num=})\")\n",
+    "                else:\n",
+    "                    right = mid\n",
+    "                    print(f\"(tail[{mid}]={tails[mid]}) >= ({num=})\")\n",
+    "                print(f\"{left = }, {right = }, {mid = }\")\n",
+    "                print(\"-\" * 50)\n",
+    "            \n",
+    "            # 如果找到的位置等於 tails 的長度，表示 num 比所有結尾都大\n",
+    "            if left == len(tails):\n",
+    "                tails.append(num)\n",
+    "                print(f\"({num=}) 比所有結尾都大, 新增到 tails 中\")\n",
+    "            else:\n",
+    "                # 否則更新該位置的值\n",
+    "                tails[left] = num\n",
+    "                print(f\"({num=}) 更新到 tails[{left}] 中\")\n",
+    "\n",
+    "            print(f\"當前數字: {num}, tails: {tails}\")\n",
+    "            print(\"_\" * 50)\n",
+    "        \n",
+    "        return len(tails)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(num=10) 比所有結尾都大, 新增到 tails 中\n",
+      "當前數字: 10, tails: [10]\n",
+      "__________________________________________________\n",
+      "left = 0, right = 1, mid = 0\n",
+      "(tail[0]=10) >= (num=9)\n",
+      "left = 0, right = 0, mid = 0\n",
+      "--------------------------------------------------\n",
+      "(num=9) 更新到 tails[0] 中\n",
+      "當前數字: 9, tails: [9]\n",
+      "__________________________________________________\n",
+      "left = 0, right = 1, mid = 0\n",
+      "(tail[0]=9) >= (num=2)\n",
+      "left = 0, right = 0, mid = 0\n",
+      "--------------------------------------------------\n",
+      "(num=2) 更新到 tails[0] 中\n",
+      "當前數字: 2, tails: [2]\n",
+      "__________________________________________________\n",
+      "left = 0, right = 1, mid = 0\n",
+      "(tail[0]=2) < (num=5)\n",
+      "left = 1, right = 1, mid = 0\n",
+      "--------------------------------------------------\n",
+      "(num=5) 比所有結尾都大, 新增到 tails 中\n",
+      "當前數字: 5, tails: [2, 5]\n",
+      "__________________________________________________\n",
+      "left = 0, right = 2, mid = 1\n",
+      "(tail[1]=5) >= (num=3)\n",
+      "left = 0, right = 1, mid = 1\n",
+      "--------------------------------------------------\n",
+      "left = 0, right = 1, mid = 0\n",
+      "(tail[0]=2) < (num=3)\n",
+      "left = 1, right = 1, mid = 0\n",
+      "--------------------------------------------------\n",
+      "(num=3) 更新到 tails[1] 中\n",
+      "當前數字: 3, tails: [2, 3]\n",
+      "__________________________________________________\n",
+      "left = 0, right = 2, mid = 1\n",
+      "(tail[1]=3) < (num=7)\n",
+      "left = 2, right = 2, mid = 1\n",
+      "--------------------------------------------------\n",
+      "(num=7) 比所有結尾都大, 新增到 tails 中\n",
+      "當前數字: 7, tails: [2, 3, 7]\n",
+      "__________________________________________________\n",
+      "left = 0, right = 3, mid = 1\n",
+      "(tail[1]=3) < (num=101)\n",
+      "left = 2, right = 3, mid = 1\n",
+      "--------------------------------------------------\n",
+      "left = 2, right = 3, mid = 2\n",
+      "(tail[2]=7) < (num=101)\n",
+      "left = 3, right = 3, mid = 2\n",
+      "--------------------------------------------------\n",
+      "(num=101) 比所有結尾都大, 新增到 tails 中\n",
+      "當前數字: 101, tails: [2, 3, 7, 101]\n",
+      "__________________________________________________\n",
+      "left = 0, right = 4, mid = 2\n",
+      "(tail[2]=7) < (num=18)\n",
+      "left = 3, right = 4, mid = 2\n",
+      "--------------------------------------------------\n",
+      "left = 3, right = 4, mid = 3\n",
+      "(tail[3]=101) >= (num=18)\n",
+      "left = 3, right = 3, mid = 3\n",
+      "--------------------------------------------------\n",
+      "(num=18) 更新到 tails[3] 中\n",
+      "當前數字: 18, tails: [2, 3, 7, 18]\n",
+      "__________________________________________________\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums = [10,9,2,5,3,7,101,18]\n",
+    "Solution().lengthOfLIS(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**時間複雜度: O($n^2$)**  \n",
     "**空間複雜度: O($n$)**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,10 +181,10 @@
     "        length = len(nums)\n",
     "        \n",
     "        # 表示每個數字自身就是長度為 1 的遞增子序列\n",
-    "        dp = [1] * length\n",
+    "        dp = [1] * length # space: O(n)\n",
     "        print(f\"{nums = }\\n{dp   = }\")\n",
     "\n",
-    "        for right in range(1, length):\n",
+    "        for right in range(1, length): # time: O(n^2)\n",
     "            print(\"_\" * 50)\n",
     "            for left in range(right):\n",
     "                print(\"-\" * 50)\n",
@@ -58,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +348,7 @@
        "4"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
