--- a/1143. Longest Common Subsequence.ipynb
+++ b/1143. Longest Common Subsequence.ipynb
@@ -18,13 +18,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**時間複雜度: O($m \\times n$)**  \n",
-    "**空間複雜度: O(min(m,n))**"
+    "**時間複雜度: $O(m \\times n)$**  \n",
+    "**空間複雜度: $O(min(m,n))$**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
     "        m, n = len(text1), len(text2)\n",
     "        \n",
     "        # 只使用兩行的DP表格\n",
-    "        dp = [[0] * (n + 1) for _ in range(2)]  # space: O(2*n) = O(n)\n",
+    "        dp = [[0] * (n + 1) for _ in range(2)]  # space: O(2 * min(m,n)) = O(min(m,n))\n",
     "        \n",
     "        # 填充DP表格\n",
     "        for i in range(1, m + 1):  # time: O(m*n)\n",
@@ -46,13 +46,21 @@
     "                    dp[i % 2][j] = dp[(i-1) % 2][j-1] + 1\n",
     "                else:\n",
     "                    dp[i % 2][j] = max(dp[(i-1) % 2][j], dp[i % 2][j-1])\n",
+    "                \n",
+    "                \n",
+    "                print(f\"{i=}, {j=}\")\n",
+    "                print(f\"{text1=}, {text2=}\")\n",
+    "                print(f\"text1[i-1]=text1[{i-1}]={text1[i-1]}, text2[j-1]=text2[{j-1}]={text2[j-1]}\")\n",
+    "                print(f\"當前行:{(i%2)=}, 上一行:{((i-1)%2)=}\")\n",
+    "                for row in dp: print(row)\n",
+    "                print(\"-\"*100)\n",
     "        \n",
     "        return dp[m % 2][n]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -62,150 +70,105 @@
       "i=1, j=1\n",
       "text1='abcde', text2='ace'\n",
       "text1[i-1]=text1[0]=a, text2[j-1]=text2[0]=a\n",
+      "當前行:(i%2)=1, 上一行:((i-1)%2)=0\n",
       "[0, 0, 0, 0]\n",
       "[0, 1, 0, 0]\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 0, 0, 0]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "i=1, j=2\n",
       "text1='abcde', text2='ace'\n",
       "text1[i-1]=text1[0]=a, text2[j-1]=text2[1]=c\n",
+      "當前行:(i%2)=1, 上一行:((i-1)%2)=0\n",
       "[0, 0, 0, 0]\n",
       "[0, 1, 1, 0]\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 0, 0, 0]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "i=1, j=3\n",
       "text1='abcde', text2='ace'\n",
       "text1[i-1]=text1[0]=a, text2[j-1]=text2[2]=e\n",
+      "當前行:(i%2)=1, 上一行:((i-1)%2)=0\n",
       "[0, 0, 0, 0]\n",
       "[0, 1, 1, 1]\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 0, 0, 0]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "i=2, j=1\n",
       "text1='abcde', text2='ace'\n",
       "text1[i-1]=text1[1]=b, text2[j-1]=text2[0]=a\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 1, 1, 1]\n",
+      "當前行:(i%2)=0, 上一行:((i-1)%2)=1\n",
       "[0, 1, 0, 0]\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 0, 0, 0]\n",
+      "[0, 1, 1, 1]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "i=2, j=2\n",
       "text1='abcde', text2='ace'\n",
       "text1[i-1]=text1[1]=b, text2[j-1]=text2[1]=c\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 1, 1, 1]\n",
+      "當前行:(i%2)=0, 上一行:((i-1)%2)=1\n",
       "[0, 1, 1, 0]\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 0, 0, 0]\n",
+      "[0, 1, 1, 1]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "i=2, j=3\n",
       "text1='abcde', text2='ace'\n",
       "text1[i-1]=text1[1]=b, text2[j-1]=text2[2]=e\n",
-      "[0, 0, 0, 0]\n",
+      "當前行:(i%2)=0, 上一行:((i-1)%2)=1\n",
       "[0, 1, 1, 1]\n",
       "[0, 1, 1, 1]\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 0, 0, 0]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "i=3, j=1\n",
       "text1='abcde', text2='ace'\n",
       "text1[i-1]=text1[2]=c, text2[j-1]=text2[0]=a\n",
-      "[0, 0, 0, 0]\n",
+      "當前行:(i%2)=1, 上一行:((i-1)%2)=0\n",
       "[0, 1, 1, 1]\n",
       "[0, 1, 1, 1]\n",
-      "[0, 1, 0, 0]\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 0, 0, 0]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "i=3, j=2\n",
       "text1='abcde', text2='ace'\n",
       "text1[i-1]=text1[2]=c, text2[j-1]=text2[1]=c\n",
-      "[0, 0, 0, 0]\n",
+      "當前行:(i%2)=1, 上一行:((i-1)%2)=0\n",
       "[0, 1, 1, 1]\n",
-      "[0, 1, 1, 1]\n",
-      "[0, 1, 2, 0]\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 0, 0, 0]\n",
+      "[0, 1, 2, 1]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "i=3, j=3\n",
       "text1='abcde', text2='ace'\n",
       "text1[i-1]=text1[2]=c, text2[j-1]=text2[2]=e\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 1, 1, 1]\n",
+      "當前行:(i%2)=1, 上一行:((i-1)%2)=0\n",
       "[0, 1, 1, 1]\n",
       "[0, 1, 2, 2]\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 0, 0, 0]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "i=4, j=1\n",
       "text1='abcde', text2='ace'\n",
       "text1[i-1]=text1[3]=d, text2[j-1]=text2[0]=a\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 1, 1, 1]\n",
+      "當前行:(i%2)=0, 上一行:((i-1)%2)=1\n",
       "[0, 1, 1, 1]\n",
       "[0, 1, 2, 2]\n",
-      "[0, 1, 0, 0]\n",
-      "[0, 0, 0, 0]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "i=4, j=2\n",
       "text1='abcde', text2='ace'\n",
       "text1[i-1]=text1[3]=d, text2[j-1]=text2[1]=c\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 1, 1, 1]\n",
-      "[0, 1, 1, 1]\n",
+      "當前行:(i%2)=0, 上一行:((i-1)%2)=1\n",
+      "[0, 1, 2, 1]\n",
       "[0, 1, 2, 2]\n",
-      "[0, 1, 2, 0]\n",
-      "[0, 0, 0, 0]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "i=4, j=3\n",
       "text1='abcde', text2='ace'\n",
       "text1[i-1]=text1[3]=d, text2[j-1]=text2[2]=e\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 1, 1, 1]\n",
-      "[0, 1, 1, 1]\n",
+      "當前行:(i%2)=0, 上一行:((i-1)%2)=1\n",
       "[0, 1, 2, 2]\n",
       "[0, 1, 2, 2]\n",
-      "[0, 0, 0, 0]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "i=5, j=1\n",
       "text1='abcde', text2='ace'\n",
       "text1[i-1]=text1[4]=e, text2[j-1]=text2[0]=a\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 1, 1, 1]\n",
-      "[0, 1, 1, 1]\n",
+      "當前行:(i%2)=1, 上一行:((i-1)%2)=0\n",
       "[0, 1, 2, 2]\n",
       "[0, 1, 2, 2]\n",
-      "[0, 1, 0, 0]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "i=5, j=2\n",
       "text1='abcde', text2='ace'\n",
       "text1[i-1]=text1[4]=e, text2[j-1]=text2[1]=c\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 1, 1, 1]\n",
-      "[0, 1, 1, 1]\n",
+      "當前行:(i%2)=1, 上一行:((i-1)%2)=0\n",
       "[0, 1, 2, 2]\n",
       "[0, 1, 2, 2]\n",
-      "[0, 1, 2, 0]\n",
       "----------------------------------------------------------------------------------------------------\n",
       "i=5, j=3\n",
       "text1='abcde', text2='ace'\n",
       "text1[i-1]=text1[4]=e, text2[j-1]=text2[2]=e\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 1, 1, 1]\n",
-      "[0, 1, 1, 1]\n",
-      "[0, 1, 2, 2]\n",
+      "當前行:(i%2)=1, 上一行:((i-1)%2)=0\n",
       "[0, 1, 2, 2]\n",
       "[0, 1, 2, 3]\n",
       "----------------------------------------------------------------------------------------------------\n",
@@ -229,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
