--- a/416. Partition Equal Subset Sum.ipynb
+++ b/416. Partition Equal Subset Sum.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,9 +67,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total_sum=22\n",
+      "target=11\n",
+      "dp=[True, False, False, False, False, False, False, False, False, False, False, False]\n",
+      "____________________________________________________________________________________________________\n",
+      "num=1, range: 11 to 1\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "num=1, i=11\n",
+      "(dp[i]=dp[11]=False) or (dp[i-num]=dp[10]=False)\n",
+      "dp=[True, False, False, False, False, False, False, False, False, False, False, False]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "num=1, i=10\n",
+      "(dp[i]=dp[10]=False) or (dp[i-num]=dp[9]=False)\n",
+      "dp=[True, False, False, False, False, False, False, False, False, False, False, False]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "num=1, i=9\n",
+      "(dp[i]=dp[9]=False) or (dp[i-num]=dp[8]=False)\n",
+      "dp=[True, False, False, False, False, False, False, False, False, False, False, False]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "num=1, i=8\n",
+      "(dp[i]=dp[8]=False) or (dp[i-num]=dp[7]=False)\n",
+      "dp=[True, False, False, False, False, False, False, False, False, False, False, False]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "num=1, i=7\n",
+      "(dp[i]=dp[7]=False) or (dp[i-num]=dp[6]=False)\n",
+      "dp=[True, False, False, False, False, False, False, False, False, False, False, False]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "num=1, i=6\n",
+      "(dp[i]=dp[6]=False) or (dp[i-num]=dp[5]=False)\n",
+      "dp=[True, False, False, False, False, False, False, False, False, False, False, False]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "num=1, i=5\n",
+      "(dp[i]=dp[5]=False) or (dp[i-num]=dp[4]=False)\n",
+      "dp=[True, False, False, False, False, False, False, False, False, False, False, False]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "num=1, i=4\n",
+      "(dp[i]=dp[4]=False) or (dp[i-num]=dp[3]=False)\n",
+      "dp=[True, False, False, False, False, False, False, False, False, False, False, False]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "num=1, i=3\n",
+      "(dp[i]=dp[3]=False) or (dp[i-num]=dp[2]=False)\n",
+      "dp=[True, False, False, False, False, False, False, False, False, False, False, False]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "num=1, i=2\n",
+      "(dp[i]=dp[2]=False) or (dp[i-num]=dp[1]=False)\n",
+      "dp=[True, False, False, False, False, False, False, False, False, False, False, False]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "num=1, i=1\n",
+      "(dp[i]=dp[1]=False) or (dp[i-num]=dp[0]=True)\n",
+      "dp=[True, True, False, False, False, False, False, False, False, False, False, False]\n",
+      "____________________________________________________________________________________________________\n",
+      "num=5, range: 11 to 5\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "num=5, i=11\n",
+      "(dp[i]=dp[11]=False) or (dp[i-num]=dp[6]=False)\n",
+      "dp=[True, True, False, False, False, False, False, False, False, False, False, False]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "num=5, i=10\n",
+      "(dp[i]=dp[10]=False) or (dp[i-num]=dp[5]=False)\n",
+      "dp=[True, True, False, False, False, False, False, False, False, False, False, False]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "num=5, i=9\n",
+      "(dp[i]=dp[9]=False) or (dp[i-num]=dp[4]=False)\n",
+      "dp=[True, True, False, False, False, False, False, False, False, False, False, False]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "num=5, i=8\n",
+      "(dp[i]=dp[8]=False) or (dp[i-num]=dp[3]=False)\n",
+      "dp=[True, True, False, False, False, False, False, False, False, False, False, False]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "num=5, i=7\n",
+      "(dp[i]=dp[7]=False) or (dp[i-num]=dp[2]=False)\n",
+      "dp=[True, True, False, False, False, False, False, False, False, False, False, False]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "num=5, i=6\n",
+      "(dp[i]=dp[6]=False) or (dp[i-num]=dp[1]=True)\n",
+      "dp=[True, True, False, False, False, False, True, False, False, False, False, False]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "num=5, i=5\n",
+      "(dp[i]=dp[5]=False) or (dp[i-num]=dp[0]=True)\n",
+      "dp=[True, True, False, False, False, True, True, False, False, False, False, False]\n",
+      "____________________________________________________________________________________________________\n",
+      "num=11, range: 11 to 11\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "num=11, i=11\n",
+      "(dp[i]=dp[11]=False) or (dp[i-num]=dp[0]=True)\n",
+      "dp=[True, True, False, False, False, True, True, False, False, False, False, True]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nums = [1,5,11,5]\n",
     "Solution().canPartition(nums)\n"
