--- a/153. Find Minimum in Rotated Sorted Array.ipynb
+++ b/153. Find Minimum in Rotated Sorted Array.ipynb
@@ -28,7 +28,7 @@
     "        left = 0 # space: O(1)\n",
     "        right = len(nums) - 1 # space: O(1)\n",
     "\n",
-    "        while left < right: # time: O(log n)\n",
+    "        while left < right: # (tip: left == right 時，已經找到最小值) # time: O(log n)\n",
     "            mid = (left + right) // 2\n",
     "\n",
     "            print(\"-\" * 50)\n",
