--- a/206. Reverse Linked List.ipynb
+++ b/206. Reverse Linked List.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,13 +24,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Traversal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* 時間複雜度: O( $n$ )\n",
     "* 空間複雜度: O( $1$ )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,13 +156,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 時間複雜度: O($n$)\n",
-    "* 空間複雜度: O($n$)"
+    "### recursion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 時間複雜度: O( $n$ )\n",
+    "* 空間複雜度: O( $n$ )\n",
+    "\n",
+    "每個節點都被調用一次，所以時間複雜度為 O( $n$ )  \n",
+    "空間複雜度為遞迴調用棧深度，所以為 O( $n$ )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,31 +197,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import Optional\n",
+    "\n",
     "class Solution:\n",
     "    def reverseList(self, head: Optional[ListNode]) -> Optional[ListNode]:\n",
-    "        # 初始化結果鏈結串列的頭部為空\n",
-    "        result = None  # space: O(n)\n",
-    "        \n",
-    "        # 當前指標遍歷整個原始鏈結串列\n",
-    "        while head: # time: O(n)\n",
-    "            # 創建一個新的節點，其值為當前節點的值，下一個節點指向結果鏈結串列的頭部\n",
-    "            result = ListNode(head.val, result)\n",
-    "            # 將原始鏈結串列的頭部移到下一個節點\n",
-    "            head = head.next\n",
-    "            # print(f\"{result = }\\n{head = }\")\n",
+    "        # print(f\"{head=}\")\n",
     "\n",
-    "        # 返回反轉後的鏈結串列的頭部\n",
-    "        return result"
+    "        # 如果鏈表為空或只有一個節點，直接返回\n",
+    "        if not head or not head.next:\n",
+    "            # print(f\"** 當前 reversed_list = head({head})，但 head 修改時 reversed_list 始終握著 node({head.val}) **\") if head else \"\"\n",
+    "            # print(\"-\" * 100)\n",
+    "            return head\n",
+    "\n",
+    "        # 遞迴調用，反轉剩餘部分\n",
+    "        reversed_list = self.reverseList(head.next)\n",
+    "        # print(f\"{head=}\\n{reversed_list=}\\n\")\n",
+    "\n",
+    "        # 將當前節點接到反轉後的鏈表末尾(形成 cycle)\n",
+    "        # ex: head: 4 -> \"5\" -> 4 -> cycle(5,4)；reversed_list: \"5\" -> 4 -> cycle(5,4)\n",
+    "        # ex: head: 3 -> \"4\" -> 3 -> cycle(4,3)；reversed_list: 5 -> \"4\" -> -> 3 -> cycle(4,3)\n",
+    "        # ex: head: 2 -> \"3\" -> 2 -> cycle(3,2)；reversed_list: 5 -> 4 -> -> \"3\" -> 2 -> cycle(3,2)\n",
+    "        # ex: head: 1 -> \"2\" -> 1 -> cycle(2,1)；reversed_list: 5 -> 4 -> -> 3 -> \"2\" -> 1 -> cycle(2,1)\n",
+    "        # print(f\"add {head.val} to end and become cycle\")\n",
+    "        head.next.next = head\n",
+    "        # print(f\"{head=}\\n{reversed_list=}\\n\")\n",
+    "\n",
+    "        # 切斷舊的連接(切斷 cycle)\n",
+    "        # ex: head: 4 -> None、\"5\" -> 4 -> None；reversed_list: \"5\" -> 4 -> None\n",
+    "        # ex: head: 3 -> None、\"4\" -> 3 -> None；reversed_list: 5 -> \"4\" -> 3 -> None\n",
+    "        # ex: head: 2 -> None、\"3\" -> 2 -> None；reversed_list: 5 -> 4 -> \"3\" -> 2 -> None\n",
+    "        # ex: head: 1 -> None、\"2\" -> 1 -> None；reversed_list: 5 -> 4 -> 3 -> \"2\" -> 1 -> None\n",
+    "        # print(f\"cut cycle\")\n",
+    "        head.next = None\n",
+    "        # print(f\"{head=}\\n{reversed_list=}\\n\")\n",
+    "        # print(\"-\" * 100)\n",
+    "\n",
+    "        return reversed_list\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -220,29 +257,6 @@
     "while result:\n",
     "    print(result.val, end = ' ')\n",
     "    result = result.next"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# result = ListNode{val: 1, next: None}\n",
-    "# head = ListNode{val: 2, next: ListNode{val: 3, next: ListNode{val: 4, next: ListNode{val: 5, next: None}}}}\n",
-    "# ----------------------------------------------------------------------------------------------------\n",
-    "# result = ListNode{val: 2, next: ListNode{val: 1, next: None}}\n",
-    "# head = ListNode{val: 3, next: ListNode{val: 4, next: ListNode{val: 5, next: None}}}\n",
-    "# ----------------------------------------------------------------------------------------------------\n",
-    "# result = ListNode{val: 3, next: ListNode{val: 2, next: ListNode{val: 1, next: None}}}\n",
-    "# head = ListNode{val: 4, next: ListNode{val: 5, next: None}}\n",
-    "# ----------------------------------------------------------------------------------------------------\n",
-    "# result = ListNode{val: 4, next: ListNode{val: 3, next: ListNode{val: 2, next: ListNode{val: 1, next: None}}}}\n",
-    "# head = ListNode{val: 5, next: None}\n",
-    "# ----------------------------------------------------------------------------------------------------\n",
-    "# result = ListNode{val: 5, next: ListNode{val: 4, next: ListNode{val: 3, next: ListNode{val: 2, next: ListNode{val: 1, next: None}}}}}\n",
-    "# head = None\n",
-    "# ----------------------------------------------------------------------------------------------------"
    ]
   }
  ],
