--- a/153. Find Minimum in Rotated Sorted Array.ipynb
+++ b/153. Find Minimum in Rotated Sorted Array.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +47,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------\n",
+      "left = 0, mid = 3, right = 7\n",
+      "nums[left] = 4, nums[mid] = 7, nums[right] = 3\n",
+      "--------------------------------------------------\n",
+      "left = 4, mid = 5, right = 7\n",
+      "nums[left] = 0, nums[mid] = 1, nums[right] = 3\n",
+      "--------------------------------------------------\n",
+      "left = 4, mid = 4, right = 5\n",
+      "nums[left] = 0, nums[mid] = 0, nums[right] = 1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# nums = [5,1,2,3,4]\n",
     "# nums = [2,3,4,5,1]\n",
@@ -74,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
