--- a/509. Fibonacci Number.ipynb
+++ b/509. Fibonacci Number.ipynb
@@ -26,6 +26,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: O(n)**  \n",
+    "**空間複雜度: O(1)**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -33,16 +41,27 @@
    "source": [
     "class Solution:\n",
     "    def fib(self, n: int) -> int:\n",
+    "        # 如果 n <= 1,直接返回 n\n",
+    "        # n = 0 返回 0, n = 1 返回 1\n",
     "        if n <= 1:\n",
     "            return n\n",
     "        \n",
-    "        last1 = 1\n",
-    "        last2 = 0\n",
-    "        for _ in range(2, n+1):\n",
+    "        # 初始化前兩個數字\n",
+    "        # last1 代表 f(1) = 1\n",
+    "        # last2 代表 f(0) = 0 \n",
+    "        last1 = 1 # space: O(1)\n",
+    "        last2 = 0 # space: O(1)\n",
+    "        \n",
+    "        # 從第2個數字開始計算到第n個數字\n",
+    "        for _ in range(2, n+1): # time: O(n)\n",
+    "            # current 為前兩個數字的和\n",
     "            current = last1 + last2\n",
+    "            # 更新 last2 為前一個數字\n",
     "            last2 = last1\n",
+    "            # 更新 last1 為當前數字\n",
     "            last1 = current\n",
     "\n",
+    "        # 返回第n個斐波那契數\n",
     "        return last1"
    ]
   },
