--- a/152. Maximum Product Subarray.ipynb
+++ b/152. Maximum Product Subarray.ipynb
@@ -40,13 +40,14 @@
     "class Solution:\n",
     "    def maxProduct(self, nums: List[int]) -> int:\n",
     "        # 初始化三個變數，分別用來存儲當前最大值、最小值和結果\n",
+    "        # space: O(1)\n",
     "        dp_max = nums[0]\n",
     "        dp_min = nums[0]\n",
     "        dp_result = nums[0]\n",
     "        print(f\"{dp_max = }, {dp_min = }, {dp_result = }\")\n",
     "\n",
     "        # 遍歷列表中的每一個數字，從第二個數字開始\n",
-    "        for num in nums[1:]:\n",
+    "        for num in nums[1:]: # time: O(n)\n",
     "            print(\"-\" * 50)\n",
     "            # 計算當前數字乘以之前的最大值和最小值\n",
     "            product_max = num * dp_max # may be max or min\n",
@@ -277,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
