--- a/416. Partition Equal Subset Sum.ipynb
+++ b/416. Partition Equal Subset Sum.ipynb
@@ -12,8 +12,7 @@
    "metadata": {},
    "source": [
     "**時間複雜度: O($n \\times target$)**  \n",
-    "**空間複雜度: O($target$)**\n",
-    "\n"
+    "**空間複雜度: O($target$)**"
    ]
   },
   {
@@ -52,7 +51,7 @@
     "                print(f\"{num=}, {i=}\")\n",
     "                print(f\"(dp[i]=dp[{i}]={dp[i]}) or (dp[i-num]=dp[{i-num}]={dp[i-num]})\")\n",
     "\n",
-    "                # 如果 `i-num== 0`，表示 `num = i`，`i` 一定可以達成\n",
+    "                # 如果 `i-num == 0`，表示 `num = i`，`i` 一定可以達成\n",
     "                # 如果 `i-num` 是 True，表示 `i-num` 可以達成，則 `i-num` + `num` = `i` 也可以達成\n",
     "                # 如果 `i` 已經是 True，則不需要更新\n",
     "                dp[i] = dp[i] or dp[i-num]\n",
